@@ -170,7 +170,8 @@ class Bank
         RootEntryMap  roots;
 
         InstrumentEntry &getInstrumentReference(size_t rootID, size_t bankID, size_t ninstrument );
-
+        void updateShare(string bankdirs[], string localDir, string shareID);
+        void checkShare(string sourceDir, string thisDir);
         bool transferDefaultDirs(string bankdirs[]);
         bool transferOneDir(string bankdirs[], int baseNumber, int listNumber);
 
